# Fresco

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  llms.txt  prompt.md
.claude/: settings.local.json.tmp.16571.fe4e91a4d65b
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: _ci.yml  _environments.yml  _release.yml  ci.yml  distros.yml  publish.yml  release.yml
admin/: .env.local.example  .gitignore  README.md  index.html  package-lock.json  package.json
admin/src/app/: globals.css  layout.tsx  page.tsx
admin/src/app/catalog/: actions.ts  catalog-dialog.tsx  catalog-table.tsx  page.tsx
admin/src/app/feedback/: feedback-table.tsx  page.tsx
admin/src/app/issues/: issues-table.tsx  page.tsx
admin/src/app/notifications/: actions.ts  notification-dialog.tsx  notifications-table.tsx  page.tsx
admin/src/app/reliability/: page.tsx
admin/src/app/usage/: page.tsx
admin/src/components/: animated-glyph.tsx  app-sidebar.tsx  auto-refresh.tsx  badges.tsx  confirm-dialog.tsx  data-table.tsx  distribution-list.tsx  downloads-chart.tsx  empty-state.tsx  error-panel.tsx  notice.tsx  page-header.tsx  panel.tsx  release-table.tsx  sentiment-badge.tsx  stat-card.tsx  toaster.tsx  topbar.tsx
admin/src/components/ui/: card.tsx  chart.tsx  sidebar.tsx
admin/src/lib/: data.ts  events.ts  factory.ts  format.ts  packs.ts  provider.tsx  sound.ts  supabase-admin.ts  types.ts
data/: io.github.dibbayajyotiroy.Fresco.desktop  io.github.dibbayajyotiroy.Fresco.metainfo.xml
docs/: ARCHITECTURE_BRIEF.md  AUDIT.md  CI_AND_RELEASE.md  FLATHUB.md  GNOME_LIVE_WALLPAPER_PLAN.md  INSTALL.md  ROADMAP.md  SCRIPTING.md  TASKS-FOR-ROY.md  TASKS.md  WAYLAND_VERIFICATION.md  plan-frictionless-updates-responsive-ui.md
examples/: skipframe_probe.rs
extension/: README.md  manifest.json  newtab.css  newtab.html  newtab.js
flatpak/: cargo-sources.json  fresco-wrapper.sh  io.github.dibbayajyotiroy.Fresco.yaml
landing/: .env.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml
landing/public/favicon/: site.webmanifest
landing/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
landing/src/app/.well-known/ahtml.json/: route.ts
landing/src/app/ahtml/[[...path]]/: route.ts
landing/src/app/alternatives/[slug]/: page.tsx
landing/src/app/llms.txt/: route.ts
landing/src/components/: animated-glyph.tsx  animated-step-icons.tsx  at-a-glance.tsx  comparison.tsx  copy-button.tsx  count-up.tsx  download.tsx  faq.tsx  features.tsx  hero.tsx  how-it-works.tsx  json-ld.tsx  mock-laptop.tsx  site-footer.tsx  site-nav.tsx  smooth-scroll.tsx  sound-provider.tsx  sound-toggle.tsx  stats-strip.tsx  supported.tsx  theme-toggle.tsx  whats-new.tsx  wordmark.tsx
landing/src/components/game/: achievement-gallery.tsx  boot-console.tsx  quest-engine.tsx
landing/src/components/ui/: badge.tsx  button.tsx  card.tsx
landing/src/lib/: ahtml-config.ts  alternatives.ts  content.ts  factory.ts  game.ts  github.ts  packs.ts  site.ts  snapshots.ts
packaging/aur/fresco/: .SRCINFO  PKGBUILD
packaging/aur/fresco-bin/: .SRCINFO  PKGBUILD
packaging/debian/: postinst  postrm
scripts/: build-mpvpaper.sh  dde-diag.sh  fresco-update.sh
src/: autostart.rs  capability.rs  catalog.rs  cli.rs  config.rs  download.rs  ipc.rs  lib.rs  linkresolve.rs  schedule.rs  supabase.rs  telemetry.rs  update.rs
src/daemon/: control.rs  dde.rs  fullscreen.rs  mod.rs  monitors.rs  mpvpaper.rs  notifier.rs  overview.rs  wayland_outputs.rs  webbridge.rs  x11_fullscreen.rs  x11win.rs
src/daemon/mpv/: ffi.rs  mod.rs  player.rs
src/gui/: add_link.rs  daemon_ctl.rs  gallery.rs  hover_preview.rs  library.rs  mod.rs  preview.rs  status.rs  theme.rs  transition_preview.rs  updates.rs  window.rs
supabase/: schema.sql
tests/assets/: make-fixtures.sh
tests/audio/: verify-audio.sh
tests/ci/: env-smoke.sh  with-compositor.sh
tests/fidelity/: verify-fidelity.sh
tests/wayland/: verify.sh
tests/wayland/artifacts/pop:GNOME-20260616T193922Z/config/fresco/: config.toml
tests/wayland/artifacts/pop:GNOME-20260616T193922Z/state/fresco/: saved-background
verification-artifacts/: environment.json  summary.md
verification-artifacts/baseline-2026-07-03/: cargo-test.txt
verification-artifacts/cli/: binaries.txt  doctor.out  help.out  invalid.out  logs.out  source-analysis.txt  summary.md
verification-artifacts/fidelity-20260703-124848/: report.jsonl
verification-artifacts/fidelity-20260703-130507/: report.jsonl
verification-artifacts/fidelity-20260703-131817/: report.jsonl
verification-artifacts/fidelity-20260703-132349/: report.jsonl
verification-artifacts/fidelity-20260703-135418/: report.jsonl
verification-artifacts/fidelity-20260703-135651/: report.jsonl
verification-artifacts/fidelity-20260703-135907/: report.jsonl
verification-artifacts/fidelity-20260703-140044/: report.jsonl
verification-artifacts/gnome/: t17.txt
verification-artifacts/logs/: fresco-doctor.txt  fresco-status.txt  uname.txt
verification-artifacts/sway/config/fresco/: config.toml
